// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Must increase counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
     Product Card 
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    increase
  </button>
</div>
`;

exports[`ProductCard Must render correctly 1`] = `
<div
  className="productCard undefined"
>
  <h1>
     Product Card 
  </h1>
</div>
`;
